--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.1.9",
+    "framer-motion": "^11.2.4",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "openai": "^4.47.1",
@@ -36,6 +36,7 @@
     "vaul": "^0.9.0"
   },
   "devDependencies": {
+    "@types/react": "18.3.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
