--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.21.0",
     "@google/generative-ai": "^0.11.3",
+    "@prisma/client": "^5.14.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
@@ -25,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.4",
+    "groq-sdk": "^0.3.3",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "openai": "^4.47.1",
@@ -36,10 +38,14 @@
     "vaul": "^0.9.0"
   },
   "devDependencies": {
+    "@types/node": "^20.12.12",
     "@types/react": "18.3.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "prisma": "^5.14.0",
+    "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
