--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^11.2.4",
     "groq-sdk": "^0.3.3",
     "lucide-react": "^0.378.0",
+    "mongoose": "^8.4.0",
     "next": "14.2.3",
     "openai": "^4.47.1",
     "react": "^18",
